@@ -318,7 +318,7 @@ public class XML {
         try {
             char initial = string.charAt(0);
             if (initial == '-' || (initial >= '0' && initial <= '9')) {
-                Long value = new Long(string);
+                Long value = Long.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
@@ -326,7 +326,7 @@ public class XML {
         } catch (Exception ignore) {
             Iris.reportError(ignore);
             try {
-                Double value = new Double(string);
+                Double value = Double.valueOf(string);
                 if (value.toString().equals(string)) {
                     return value;
                 }
